--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,13 @@
       name="Deepika's Portfolio"
       content="Portfolio content"
     />
-    <meta property="og:title" content="Ashutosh Hathidara Portfolio" />
+    <meta property="og:title" content="Deepika M Profile" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ashutosh1919.github.io/" />
-    <meta name="description" content="Ashutosh's Personal Portfolio Website" property="og:description">
-    <meta name="description" content="/icons/desc.png" property="og:image">
-    <meta name="keywords" content="Ashutosh, PortFolio, MasterPortfolio, Ashutosh's Portfolio" />
-    <meta name="author" content="Ashutosh" />
-    <meta name="application-name" content="Deepika PortFolio" />
+    <meta property="og:url" content="https://www.google.com" />
+    <meta name="description" content="Deepika's Personal Profile Website" property="og:description">
+    <meta name="keywords" content="Deepika, PortFolio, MasterProfile, Deepika's Portfolio" />
+    <meta name="author" content="Deepika" />
+    <meta name="application-name" content="Deepika's Profile" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
