--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
     <meta name="keywords" content="Deepika, PortFolio, MasterProfile, Deepika's Portfolio" />
     <meta name="author" content="Deepika" />
     <meta name="application-name" content="Deepika's Profile" />
-    <link rel="icon" type="image/x-icon" href="icons/favicon.ico" />
 
 
+    <link rel="icon" href="/favicon.ico" />
+
+    
     <link rel="manifest" href="/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/icons/ms-icon-144x144.png">
